Fixed sidebar overlap by adding javascript to adjust width of shelf-wrapper. Fixed bug where adding a shelf with the shelf name as an empty string caused the page not to load anymore.

--- a/Project/movshare/static/css/project.css
+++ b/Project/movshare/static/css/project.css
@@ -25,6 +25,15 @@
   display: flex;
   flex-direction: row;
   padding-left: 20px;
+  margin-left: 10%;
+}
+
+.addMediaSelected{
+  margin-left: 30%;
+}
+
+.addShelfSelected{
+  margin-left: 28%;
 }
 
 
@@ -50,7 +59,10 @@
 #sidebar-wrapper {
     display: flex;
     flex-direction: column;
+    position: fixed;
     margin:10px;
+    left: auto;
+    min-width: 10%
 }
 
 #addMediaBlock{
